# bored-algebra

./: Cargo.toml  Dockerfile  README.md
cat/src/: hmm.rs  lib.rs
catty/: Cargo.toml
catty/src/: hmm.rs  lib.rs
mod_r/: Cargo.toml
mod_r/src/: module.rs  poly.rs
mod_r/src/limits/: inverse.rs
src/: abstractions.rs  error.rs  euclidean.rs  finite_fields.rs  free.rs  group_traits.rs  helpers.rs  helpers_bigint.rs  lib.rs  local.rs  macros.rs  main.rs  module.rs  permutations.rs  poly.rs  poly_iter.rs  polynomials.rs  prime.rs  prime_generation.rs  prime_generation_bigint.rs  prime_iter.rs  pseudoprime.rs  quotient.rs  sub.rs  tensor.rs  traits.rs
src/abstractions/: algebra.rs  group.rs  module.rs  object.rs  ring.rs
src/limits/: direct.rs  mod.rs
src/products/: coproduct.rs  mod.rs  product.rs
